Add needed tokens
